k0s/04_cicd/03_gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: cicd
spec:
  selector:
    app: gitea
  ports:
  - name: http-gitea
    port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  namespace: cicd
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:latest
        ports:
        - containerPort: 3000
          name: gitea
        volumeMounts:
        - mountPath: /data
          name: gitea-data-vol
          subPath: gitea
      volumes:
      - name: gitea-data-vol
        persistentVolumeClaim:
          claimName: gitea-data
