k0s/04_cicd/04_registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: cicd
spec:
  ports:
  - name: registry
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: cicd
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
      - name: auth
        secret:
          secretName: cicd-registry-secret
          items:
          - key: htpasswd
            path: htpasswd

      - name: registry-vol
        persistentVolumeClaim:
          claimName: registry-data

      containers:
        - image: registry:2
          name: registry
          ports:
            - containerPort: 5000
          volumeMounts:
          #- name: certs-vol
          #  mountPath: /certs
          - name: registry-vol
            mountPath: /var/lib/registry
            subPath: registry
          - name: auth
            mountPath: /auth
            readOnly: true
